--- a/res/layout/adapter_gallery_grid.xml
+++ b/res/layout/adapter_gallery_grid.xml
@@ -2,11 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:padding="12dip"
+    android:orientation="vertical"
+    android:id="@+id/gallery_thumb_holder" >
+
     <ImageView
         android:id="@+id/gallery_thumb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="3dip" />
+        android:padding="3dip"
+        android:scaleType="center"
+        android:src="@drawable/ic_launcher" />
 
 </LinearLayout>
