--- a/res/layout/fragment_home_camera_chooser.xml
+++ b/res/layout/fragment_home_camera_chooser.xml
@@ -6,11 +6,9 @@
     android:background="@drawable/black"
     android:orientation="vertical" >
 
-    <ImageView
+    <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_action_camera" />
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
