--- a/res/layout/action_bar_editor.xml
+++ b/res/layout/action_bar_editor.xml
@@ -10,9 +10,10 @@
         android:layout_width="70dip"
         android:layout_height="match_parent"
         android:layout_above="@+id/ab_buffer"
-        android:scaleType="fitXY"
+        android:scaleType="centerInside"
+        android:background="#00000000"
         android:layout_marginTop="6dip"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_action_up" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -20,28 +21,30 @@
         android:layout_alignParentRight="true"
         android:orientation="horizontal"
         android:layout_marginTop="6dip"
+        android:layout_marginBottom="6dip"
         android:layout_above="@+id/ab_buffer"
         android:weightSum="1" >
 
-        <ImageButton
+        <ImageButton style="@style/button_c"
             android:id="@+id/ab_share_media"
-            android:layout_width="70dip"
+            android:layout_width="56dip"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher" />
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_action_share" />
 
-        <ImageButton
+        <ImageButton style="@style/button_c"
             android:id="@+id/ab_to_fullscreen"
-            android:layout_width="70dip"
+            android:layout_width="56dip"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher" />
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_action_iba"
+            android:layout_marginRight="6dip" />
     </LinearLayout>
 
     <View
         android:id="@+id/ab_buffer"
         android:layout_width="match_parent"
-        android:layout_height="8dip"
+        android:layout_height="6dip"
         android:layout_alignParentBottom="true"
         android:background="@drawable/rusted_red" />
 
