--- a/res/layout/fragment_forms_overview.xml
+++ b/res/layout/fragment_forms_overview.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
-
+    android:orientation="vertical"
+    android:layout_marginLeft="6dip"
+    android:layout_marginRight="6dip"
+    android:id="@+id/overview_form_root" >
 </LinearLayout>
