linking up forms

--- a/res/layout/forms_media_top_level_annotations.xml
+++ b/res/layout/forms_media_top_level_annotations.xml
@@ -17,8 +17,7 @@
             style="@style/iwitness_edittext"
             android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:layout_weight="0.8"
-            android:hint="@string/add_a_quick_note" />
+            android:layout_weight="0.8" />
 
         <ImageButton
             android:id="@+id/media_audio_note_prompt"
