--- a/res/layout/fragment_editor_fullscreen_view.xml
+++ b/res/layout/fragment_editor_fullscreen_view.xml
@@ -2,55 +2,68 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scroll_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/black" >
+    android:layout_height="wrap_content" >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:padding="0dip" >
 
-        <ImageView
-            android:id="@+id/media_holder"
+        <RelativeLayout
+            android:id="@+id/media_holder_parent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="matrix" />
+            android:padding="0dip" >
 
-        <ImageButton
-            android:id="@+id/toggle_controls"
-            android:layout_width="60dip"
-            android:layout_height="60dip"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="1dip"
-            android:layout_marginLeft="1dip"
-            android:background="@drawable/trans_grey_1"
-            android:scaleType="centerInside" />
+            <ImageView
+                android:id="@+id/media_holder"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="matrix" />
 
-        <LinearLayout
-            android:id="@+id/controls_holder_landscape"
-            android:layout_width="wrap_content"
-            android:layout_height="60dip"
-            android:layout_toLeftOf="@+id/toggle_controls"
-            android:background="@drawable/trans_grey_1"
-            android:paddingTop="16dip"
-            android:visibility="gone" />
+            <ImageButton
+                android:id="@+id/toggle_controls"
+                android:layout_width="60dip"
+                android:layout_height="60dip"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="1dip"
+                android:layout_marginLeft="1dip"
+                android:background="@drawable/trans_grey_1"
+                android:scaleType="centerInside" />
 
-        <LinearLayout
-            android:id="@+id/controls_holder_portrait"
-            android:layout_width="60dip"
-            android:layout_height="wrap_content"
-            android:layout_alignRight="@+id/toggle_controls"
-            android:layout_below="@+id/toggle_controls"
-            android:background="@drawable/trans_grey_1"
-            android:paddingRight="16dip"
-            android:visibility="gone" />
-        
+            <LinearLayout
+                android:id="@+id/controls_holder_landscape"
+                android:layout_width="wrap_content"
+                android:layout_height="60dip"
+                android:layout_toLeftOf="@+id/toggle_controls"
+                android:background="@drawable/trans_grey_1"
+                android:paddingTop="16dip"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:id="@+id/controls_holder_portrait"
+                android:layout_width="60dip"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@+id/toggle_controls"
+                android:layout_below="@+id/toggle_controls"
+                android:background="@drawable/trans_grey_1"
+                android:paddingRight="16dip"
+                android:visibility="gone" />
+        </RelativeLayout>
+		<ImageView
+		    android:layout_width="match_parent"
+		    android:layout_height="20dip"
+		    android:layout_marginBottom="10dip"
+		    android:layout_marginTop="10dip"
+		    android:src="@drawable/img_pull_tab" />
         <FrameLayout
             android:id="@+id/fullscreen_form_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/media_holder" />
-    </RelativeLayout>
+            android:layout_marginBottom="10dip"
+            android:padding="10dip" />
+    </LinearLayout>
 
 </ScrollView>
