--- a/res/layout/fragment_forms_fullscreen.xml
+++ b/res/layout/fragment_forms_fullscreen.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="6dip"
     android:layout_marginRight="6dip"
-    android:id="@+id/overview_form_root" />
+    android:orientation="vertical"
+    android:id="@+id/details_form_root" />
