--- a/res/layout/fragment_editor_fullscreen_view.xml
+++ b/res/layout/fragment_editor_fullscreen_view.xml
@@ -16,11 +16,10 @@
             android:layout_height="match_parent"
             android:padding="0dip" >
 
-            <ImageView
+            <RelativeLayout
                 android:id="@+id/media_holder"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="matrix" />
+                android:layout_height="match_parent" />
 
             <ImageButton
                 android:id="@+id/toggle_controls"
