--- a/res/layout/adapter_organization_list_item.xml
+++ b/res/layout/adapter_organization_list_item.xml
@@ -13,10 +13,23 @@
         android:scaleType="centerInside"
         android:src="@drawable/ic_launcher" />
 
-    <TextView
-        android:id="@+id/organization_name"
+    <LinearLayout
         android:layout_width="0dip"
         android:layout_height="match_parent"
-        android:layout_weight="0.8" />
+        android:layout_weight="0.8"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/organization_name"
+            style="@style/iwitness_h3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/organization_details"
+            style="@style/iwitness_p"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </LinearLayout>
