--- a/res/layout/fragment_editor_details_view_p.xml
+++ b/res/layout/fragment_editor_details_view_p.xml
@@ -3,33 +3,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="0dip"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:weightSum="1"
     android:padding="0dip" >
 
+    <ImageView
+        android:id="@+id/details_media_preview"
+        android:layout_width="0dip"
+        android:layout_weight="0.5"
+        android:layout_height="match_parent"
+        android:layout_margin="0dip"
+        android:padding="0dip"
+        android:scaleType="fitXY" />
+
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="0dip"
+        android:layout_weight="0.5"
         android:layout_height="match_parent" >
 
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/details_form_holder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <ImageView
-                android:id="@+id/details_media_preview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="0dip"
-                android:padding="0dip"
-                android:scaleType="fitXY" />
-
-            <FrameLayout
-                android:id="@+id/details_form_holder"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="6dip"
-                android:paddingRight="6dip" />
-        </LinearLayout>
+            android:paddingLeft="2dip"
+            android:paddingRight="6dip" />
     </ScrollView>
 
 </LinearLayout>
