--- a/res/layout/fragment_editor_details_view_l.xml
+++ b/res/layout/fragment_editor_details_view_l.xml
@@ -2,26 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:weightSum="1" >
 
     <ImageView
         android:id="@+id/details_media_preview"
-        android:layout_width="0dip"
-        android:layout_weight="0.4"
-        android:layout_height="match_parent" />
-    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="10dip"
-        android:src="@drawable/img_pull_tab" />
+        android:layout_weight="0.5"
+        android:scaleType="fitXY"
+        android:layout_height="0dip" />
     <ScrollView
-        android:layout_width="0dip"
-        android:layout_height="match_parent"
-        android:layout_weight="0.6" >
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="0.5" >
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/details_form_holder" />
+            android:id="@+id/details_form_holder"
+            android:paddingLeft="6dip"
+            android:paddingRight="6dip" />
     </ScrollView>
 
 </LinearLayout>
