--- a/res/layout/editors_video.xml
+++ b/res/layout/editors_video.xml
@@ -7,7 +7,7 @@
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/video_controls_holder"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_gravity="center" />
 
@@ -15,21 +15,23 @@
         android:id="@+id/video_controls_holder"
         android:layout_width="match_parent"
         android:layout_height="40dip"
-        android:weightSum="1"
+        android:layout_marginBottom="20dip"
+        android:layout_alignBottom="@+id/video_view"
         android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal" >
+        android:background="@drawable/trans_black"
+        android:orientation="horizontal"
+        android:weightSum="1" >
 
-        <ImageButton style="@style/button_c"
+        <ImageButton
+            android:background="#00000000"
             android:id="@+id/video_play_pause_toggle"
             android:layout_width="0dip"
-            android:layout_weight="0.15"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_videop_play" />
+            android:layout_weight="0.15"
+            android:src="@drawable/ic_videol_play" />
 
-        <ProgressBar
+        <org.witness.iwitness.app.screens.editors.VideoSeekBar
             android:id="@+id/video_seek_bar"
-            style="@android:style/Widget.ProgressBar.Horizontal"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="0.85"
@@ -37,7 +39,10 @@
             android:indeterminate="false"
             android:indeterminateOnly="false"
             android:padding="4dip"
+            android:layout_marginLeft="2dip"
+            android:layout_marginRight="2dip"
             android:secondaryProgress="0"
+            android:thumb="@drawable/ic_videop_mark_un"
             android:thumbOffset="0dip" />
     </LinearLayout>
 
