--- a/res/layout/fragment_editor_fullscreen_view.xml
+++ b/res/layout/fragment_editor_fullscreen_view.xml
@@ -23,8 +23,8 @@
 
             <ImageButton
                 android:id="@+id/toggle_controls"
-                android:layout_width="60dip"
-                android:layout_height="60dip"
+                android:layout_width="90dip"
+                android:layout_height="90dip"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginBottom="1dip"
@@ -35,28 +35,30 @@
             <LinearLayout
                 android:id="@+id/controls_holder_landscape"
                 android:layout_width="wrap_content"
-                android:layout_height="60dip"
+                android:layout_height="90dip"
                 android:layout_toLeftOf="@+id/toggle_controls"
                 android:background="@drawable/trans_grey_1"
-                android:paddingTop="16dip"
+                android:orientation="horizontal"
                 android:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/controls_holder_portrait"
-                android:layout_width="60dip"
+                android:layout_width="90dip"
                 android:layout_height="wrap_content"
                 android:layout_alignRight="@+id/toggle_controls"
                 android:layout_below="@+id/toggle_controls"
                 android:background="@drawable/trans_grey_1"
-                android:paddingRight="16dip"
+                android:orientation="vertical"
                 android:visibility="gone" />
         </RelativeLayout>
-		<ImageView
-		    android:layout_width="match_parent"
-		    android:layout_height="20dip"
-		    android:layout_marginBottom="10dip"
-		    android:layout_marginTop="10dip"
-		    android:src="@drawable/img_pull_tab" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="20dip"
+            android:layout_marginBottom="10dip"
+            android:layout_marginTop="10dip"
+            android:src="@drawable/img_pull_tab" />
+
         <FrameLayout
             android:id="@+id/fullscreen_form_holder"
             android:layout_width="match_parent"
