--- a/res/layout/fragment_editor_fullscreen_view.xml
+++ b/res/layout/fragment_editor_fullscreen_view.xml
@@ -23,8 +23,8 @@
 
             <ImageButton
                 android:id="@+id/toggle_controls"
-                android:layout_width="90dip"
-                android:layout_height="90dip"
+                android:layout_width="100dip"
+                android:layout_height="100dip"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginBottom="1dip"
@@ -35,20 +35,22 @@
             <LinearLayout
                 android:id="@+id/controls_holder_landscape"
                 android:layout_width="wrap_content"
-                android:layout_height="90dip"
+                android:layout_height="100dip"
                 android:layout_toLeftOf="@+id/toggle_controls"
                 android:background="@drawable/trans_grey_1"
                 android:orientation="horizontal"
+                android:padding="6dip"
                 android:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/controls_holder_portrait"
-                android:layout_width="90dip"
+                android:layout_width="100dip"
                 android:layout_height="wrap_content"
                 android:layout_alignRight="@+id/toggle_controls"
                 android:layout_below="@+id/toggle_controls"
                 android:background="@drawable/trans_grey_1"
                 android:orientation="vertical"
+                android:padding="6dip"
                 android:visibility="gone" />
         </RelativeLayout>
 
