--- a/res/layout/adapter_organization_list_item.xml
+++ b/res/layout/adapter_organization_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dip"
+    android:layout_height="100dip"
     android:orientation="horizontal"
     android:weightSum="1" >
 
@@ -9,27 +9,33 @@
         android:id="@+id/organization_icon"
         android:layout_width="0dip"
         android:layout_height="match_parent"
-        android:layout_weight="0.2"
+        android:layout_weight="0.15"
         android:scaleType="centerInside"
         android:src="@drawable/ic_launcher" />
 
     <LinearLayout
         android:layout_width="0dip"
         android:layout_height="match_parent"
-        android:layout_weight="0.8"
+        android:layout_weight="0.6"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/organization_name"
             style="@style/iwitness_h3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <TextView
             android:id="@+id/organization_details"
             style="@style/iwitness_p"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
     </LinearLayout>
-
+    
+    <TextView
+        android:id="@+id/organization_is_active"
+        style="@style/iwitness_p"
+        android:layout_weight="0.25"
+        android:layout_width="0dip"
+        android:layout_height="match_parent" />
 </LinearLayout>
