--- a/res/layout/fragment_user_management_notifications.xml
+++ b/res/layout/fragment_user_management_notifications.xml
@@ -7,12 +7,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:layout_marginLeft="6dip"
+        android:layout_marginRight="6dip" >
 
         <TextView
+            android:id="@+id/notification_no_notifications"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/no_new_notifications" />
+            android:text="@string/no_notifications"
+            android:visibility="gone" />
 
         <ListView
             android:id="@+id/notifications_list_view"
