--- a/res/layout/popup_audio_note.xml
+++ b/res/layout/popup_audio_note.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="10dip" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +27,7 @@
             android:scaleType="centerInside"
             android:src="@drawable/ic_videop_play" />
 
-        <ProgressBar
+        <SeekBar
             android:id="@+id/audio_progress"
             style="@android:style/Widget.ProgressBar.Horizontal"
             android:layout_width="0dip"
