--- a/res/drawable/extras_button_c_background_active.xml
+++ b/res/drawable/extras_button_c_background_active.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@drawable/worn_red" />
+    <solid android:color="@drawable/eyewitness_blue" />
     <stroke android:color="@drawable/white" android:width="1dip"/>
 </shape>
