--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -20,7 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="46dip"
                 android:orientation="horizontal"
-                android:background="@drawable/worn_red" />
+                android:background="@drawable/eyewitness_blue" />
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
