--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -3,16 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/rusted_red"
-    android:paddingLeft="20dip"
-    android:paddingRight="20dip"
+    android:background="@drawable/eyewitness_blue"
+    android:paddingLeft="0dip"
+    android:paddingRight="0dip"
     android:paddingTop="60dip" >
-    <TextView style="@style/iwitness_h1"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:gravity="center"
-        android:layout_marginBottom="16dip" />
+        android:layout_height="100dp"
+        android:gravity="top|center"
+        android:src="@drawable/ic_launcher"
+        />
     <EditText
         android:id="@+id/login_password"
         android:layout_width="match_parent"
