audio recording moved to ODK and off of client

--- a/res/layout/popup_audio_note.xml
+++ b/res/layout/popup_audio_note.xml
@@ -27,7 +27,7 @@
             android:scaleType="centerInside"
             android:src="@drawable/ic_videop_play" />
 
-        <SeekBar
+        <info.guardianproject.odkparser.widgets.ODKSeekBar
             android:id="@+id/audio_progress"
             style="@android:style/Widget.ProgressBar.Horizontal"
             android:layout_width="0dip"
