changing activity layout for new logo

--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -17,9 +17,13 @@
         android:id="@+id/login_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:hint="@string/password"
         android:layout_marginBottom="10dip"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="@drawable/white"
+        android:textColorHighlight="@drawable/white"
+         />
     <Button
         android:id="@+id/login_commit"
         android:layout_width="wrap_content"
