--- a/res/layout/activity_wipe.xml
+++ b/res/layout/activity_wipe.xml
@@ -2,45 +2,98 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/trans_black"
     android:orientation="vertical" >
+
     <LinearLayout
         android:id="@+id/wipe_settings_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="1"
+        android:layout_alignParentTop="true"
         android:orientation="horizontal"
-        android:layout_alignParentTop="true" >
+        android:weightSum="1" >
+
         <Button
-            android:layout_width="0dip"
-            android:layout_weight="0.5"
-            android:layout_height="wrap_content"
             android:id="@+id/wipe_change_settings"
-            android:text="@string/change_settings" />
-        <Button
+            style="@style/button_f"
             android:layout_width="0dip"
-            android:layout_weight="0.5"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="@string/change_settings" />
+
+        <Button
             android:id="@+id/wipe_cancel"
+            style="@style/button_f"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:text="@string/cancel" />
     </LinearLayout>
+    
     <Button
         android:id="@+id/wipe_logout"
-        android:layout_width="match_parent"
+        style="@style/button_f"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/wipe_settings_holder"
-        android:text="@string/log_out" />
+        android:layout_centerHorizontal="true"
+        android:drawableLeft="@drawable/ic_context_slide_left"
+        android:text="@string/log_out"
+        android:textSize="26sp" />
+
     <View
         android:id="@+id/wipe_trigger_buffer"
-        android:layout_below="@+id/wipe_logout"
-        android:layout_width="match_parent" 
-        android:layout_height="20dip"/>
+        android:layout_width="match_parent"
+        android:layout_height="56dip"
+        android:layout_below="@+id/wipe_logout" />
 
-    <ImageView
+    <ScrollView
         android:id="@+id/wipe_trigger"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/wipe_trigger_buffer"
-        android:src="@drawable/ic_launcher" />
+        android:layout_below="@+id/wipe_trigger_buffer" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingLeft="60dip"
+            android:paddingRight="60dip" >
+
+            <TextView
+                style="@style/button_f"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/or"
+                android:gravity="center" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_contextlg_panic" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dip"
+                android:layout_marginTop="10dip"
+                android:gravity="center"
+                android:text="@string/pull_down_to_wipe"
+                android:textColor="@drawable/white"
+                android:textSize="24sp"
+                android:textStyle="bold|italic" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_contextlg_swipe_down" />
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
