--- a/res/layout/fragment_editor_fullscreen_view.xml
+++ b/res/layout/fragment_editor_fullscreen_view.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scroll_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:background="@drawable/white" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,6 +12,7 @@
         android:padding="0dip" >
 
         <RelativeLayout
+            android:background="@drawable/black"
             android:id="@+id/media_holder_parent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -53,12 +55,11 @@
                 android:padding="6dip"
                 android:visibility="gone" />
         </RelativeLayout>
-
+		<include layout="@layout/extras_divider_blue" />
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="20dip"
             android:layout_marginBottom="10dip"
-            android:layout_marginTop="10dip"
             android:src="@drawable/img_pull_tab" />
 
         <FrameLayout
