--- a/res/layout/fragment_forms_fullscreen.xml
+++ b/res/layout/fragment_forms_fullscreen.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:minHeight="1000dp"
     android:layout_marginLeft="6dip"
     android:layout_marginRight="6dip"
     android:orientation="vertical"
