--- a/res/layout/tabs_iwitness.xml
+++ b/res/layout/tabs_iwitness.xml
@@ -3,20 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-  	<View
-  	    android:id="@+id/tab_selector"
-  	    android:layout_width="match_parent"
-  	    android:layout_height="8dip"
-  	    android:layout_alignParentBottom="true"
-  	    android:background="@drawable/tab_underline_selector" />
 
-  	<TextView style="@style/iwitness_h1"
-  	    android:id="@+id/tab_label"
-  	    android:layout_width="wrap_content"
-  	    android:layout_height="wrap_content"
-  	    android:layout_alignParentTop="true"
-  	    android:layout_centerHorizontal="true"
-  	    android:text="@string/app_name" />
+    <ImageView
+        android:id="@+id/tab_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:paddingBottom="6dip"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_iwitness" />
+
+    <View
+        android:id="@+id/tab_selector"
+        android:layout_width="match_parent"
+        android:layout_height="8dip"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/tab_underline_selector" />
 
 </RelativeLayout>
