--- a/res/layout/adapter_notification_list_item.xml
+++ b/res/layout/adapter_notification_list_item.xml
@@ -3,17 +3,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <TextView 
-        android:textColor="@drawable/grey"
-        android:id="@+id/notification_metadata"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView style="@style/iwitness_p"
-        android:id="@+id/notification_label"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/notification_metadata"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@drawable/blue" />
+
+        <TextView
+            android:layout_marginLeft="6dip"
+            android:id="@+id/notification_label"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@drawable/grey" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView style="@style/iwitness_h3"
-        android:id="@+id/notification_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1" >
+
+        <TextView
+            android:id="@+id/notification_content"
+            style="@style/iwitness_h3"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.8" />
+
+        <ImageView
+            android:id="@+id/notification_icon"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2" />
+    </LinearLayout>
+
 </LinearLayout>
