--- a/res/layout/fragment_user_management_notifications.xml
+++ b/res/layout/fragment_user_management_notifications.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/notification_list_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/notification_list_root" >
+    android:layout_marginLeft="6dip"
+    android:layout_marginRight="6dip"
+    android:orientation="vertical"
+    android:layout_marginBottom="6dip" >
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/notification_no_notifications"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="6dip"
-        android:layout_marginRight="6dip" >
+        android:text="@string/no_notifications"
+        android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/notification_no_notifications"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/no_notifications"
-            android:visibility="gone" />
+    <ListView
+        android:id="@+id/notifications_list_view"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="10dip"
+        android:layout_height="wrap_content" />
 
-        <ListView
-            android:id="@+id/notifications_list_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-</ScrollView>
+</LinearLayout>
