--- a/app/res/xml/preferences.xml
+++ b/app/res/xml/preferences.xml
@@ -8,6 +8,12 @@
             android:entryValues="@array/languages"
             android:key="iw_language"
             android:title="@string/prefs_language_title" />
+        <ListPreference
+            android:title="@string/original_images_should_be"
+            android:defaultValue="0"
+            android:key="originalImageHandling"
+            android:entries="@array/originalImageOptions_"
+            android:entryValues="@array/originalImageOptions" />
     </PreferenceCategory>
 
 </PreferenceScreen>
